# WebRTC-Streamer

./: .gitignore  CMakeLists.txt  README.md  cameras.conf
Server/: server.js
Web-Client/: client.html  script.js
include/: CameraConfig.h  Config.h  Logger.h  WebRTCApp.h  WebRTCStream.h
src/: Logger.cpp  WebRTCApp.cpp  WebRTCStream.cpp  main.cpp
